--- a/wildcatweb/src/features/commandPanel/dashboards/motor/styles/MotorDash.module.css
+++ b/wildcatweb/src/features/commandPanel/dashboards/motor/styles/MotorDash.module.css
@@ -143,9 +143,11 @@
     outline: var(--border-width-standard) solid var(--panel-border);
 }
 
-.forwardBar {
+.clockwiseBar {
     background-color: var(--color-gray-subtle);
 }
+
+
 
 .stopBar {
     background-color: var(--color-gray-subtle);
@@ -153,7 +155,7 @@
 
 .stopBar svg{
     stroke: var(--color-error-main);
-    fill: var(--color-error-main);
+    /* fill: var(--color-error-main); */
 }
 
 .stopBar.active {
@@ -171,18 +173,34 @@
     fill: var(--color-error-main);
 }
 
-.forwardBar.active {
-    background-color: var(--color-motor-forward);
+.clockwiseBar.active {
+    background-color: var(--color-motor-clockwise);
     box-shadow: var(--glow-secondary);
 }
 
-.backwardBar {
-    background-color: var(--color-gray-subtle);
+.clockwiseBar.active  svg {
+    color: var(--color-background);
 }
 
-.backwardBar.active {
-    background-color: var(--color-motor-backward);
+.clockwiseBar  svg {
+    color: var(--color-motor-clockwise);
+}
+
+.countercwBar {
+    background: var(--color-gray-subtle);
+}
+
+.countercwBar.active {
+    background-color: var(--color-motor-countercw);
     box-shadow: var(--glow-warning);
+}
+
+.countercwBar.active  svg {
+    color: var(--color-background);
+}
+
+.countercwBar  svg {
+    color: var(--color-motor-countercw);
 }
 
 /* For icons that need to be flipped horizontally */
